Added docstring for methods

--- a/YOLOv7 VinBigData Chest X-Ray.ipynb
+++ b/YOLOv7 VinBigData Chest X-Ray.ipynb
@@ -163,6 +163,12 @@
       "cell_type": "code",
       "source": [
         "def prime_dataset() -> List[pd.DataFrame]:\n",
+        "    \"\"\"\n",
+        "    Ready the dataset and partition it into training and validation folders.\n",
+        "\n",
+        "    :return: Two datasets, one raw and another preprocessed\n",
+        "    \"\"\"\n",
+        "\n",
         "    # Read dataset manifest\n",
         "    train_df = pd.read_csv('data/train.csv')\n",
         "    train_meta_df = pd.read_csv('data/train_meta.csv')\n",
@@ -304,6 +310,20 @@
         "        show_radiologist_objects_distribution: bool = True,\n",
         "        show_radiologist_images_distribution: bool = True\n",
         "):\n",
+        "    \"\"\"\n",
+        "    Conducts preliminary exploratory methods.\n",
+        "\n",
+        "    :param pd.Dataframe df_raw: Specify the source dataframe (without modifications)\n",
+        "    :param pd.Dataframe df_preprocessed: Specify the preprocessed dataframe (with modifications)\n",
+        "    :param bool show_dataframe: Specify whether to show a sample from the dataframe or not\n",
+        "    :param bool show_image_sample: Specify whether to display a sample image from each class or not\n",
+        "    :param bool show_annotations_per_patient: Specify whether to plot the distribution of the number of objects detected in patients or not\n",
+        "    :param bool show_unique_annotations_per_patient: Specify whether to plot the distribution of the unique number of objects detected in patients or not\n",
+        "    :param bool show_class_distribution: Specify whether to plot the distribution of each class or not\n",
+        "    :param bool show_radiologist_objects_distribution: Specify whether to plot the distribution of the number of objects annotated by each radiologist or not\n",
+        "    :param bool show_radiologist_images_distribution: Specify whether to plot the distribution of the number of images handled by each radiologist or not\n",
+        "    \"\"\"\n",
+        "\n",
         "    if show_dataframe:\n",
         "        display(raw_df.head())\n",
         "        display(preprocessed_df.head())\n",
@@ -416,6 +436,15 @@
         "        export_as_tf: bool = True,\n",
         "        export_as_tflite: bool = True,\n",
         "):\n",
+        "    \"\"\"\n",
+        "    Builds the model, and export a PyTorch model.\n",
+        "\n",
+        "    :param bool visualize: Specify whether to carry out the evaluation metrics on the created model or not (show plots containing multiple evaluation metrics, including the confusion matrix and the precision-recall curve)\n",
+        "    :param bool export_as_onnx: Specify whether to export the model in a notation that is interpretable by ONNX or not\n",
+        "    :param bool export_as_tf: Specify whether to export the model in a notation that is interpretable by TensorFlow or not, ignores export_as_onnx value when set to True\n",
+        "    :param bool export_as_tflite: Specify whether to export the model in a notation that is interpretable by TensorFlow and optimized on edge devices or not, ignores export_as_onnx and export_as_tf values when set to True\n",
+        "    \"\"\"\n",
+        "\n",
         "    !python yolov7/train.py --img {IMAGE_SIZE} --batch-size 8 --epochs 50 --data yolo.yaml --weights yolov7.pt\n",
         "\n",
         "    if visualize:\n",
