Added more output images

--- a/YOLOv7 VinBigData Chest X-Ray.ipynb
+++ b/YOLOv7 VinBigData Chest X-Ray.ipynb
@@ -45,7 +45,7 @@
         "# Library for visualizing bounding boxes\n",
         "!pip install bbox-visualizer\n",
         "\n",
-        "# Instal ONNX library, will be used to convert from pytorch model to a tf model\n",
+        "# Install ONNX library, will be used to convert from pytorch model to a tf model\n",
         "!pip install onnx onnxruntime onnxsim onnx-tf\n",
         "\n",
         "import bbox_visualizer as bbv\n",
