Exported models are now properly inferenced

--- a/YOLOv7 VinBigData Chest X-Ray.ipynb
+++ b/YOLOv7 VinBigData Chest X-Ray.ipynb
@@ -469,15 +469,15 @@
         "        plt.rcParams.update({'figure.figsize': (15, 8)})\n",
         "\n",
         "    if export_as_onnx or export_as_tf or export_as_tflite:\n",
-        "        !python yolov7/export.py --weights yolov7.pt --img-size {IMAGE_SIZE} {IMAGE_SIZE}\n",
+        "        !python yolov7/export.py --weights yolov7.pt --img-size {IMAGE_SIZE} {IMAGE_SIZE} --max-wh {IMAGE_SIZE} --grid --end2end --simplify\n",
         "\n",
         "        if export_as_tf or export_as_tflite:\n",
-        "            !onnx-tf convert -i yolov7_model.onnx -o ./\n",
+        "            !onnx-tf convert -i yolov7.onnx -o ./\n",
         "\n",
         "            if export_as_tflite:\n",
         "                converter = tf.lite.TFLiteConverter.from_saved_model('./')\n",
         "                tflite_model = converter.convert()\n",
-        "                with open('yolov7_model.tflite', 'wb') as f:\n",
+        "                with open('yolov7.tflite', 'wb') as f:\n",
         "                    f.write(tflite_model)"
       ],
       "metadata": {
